# symbolic-music-assistant

./: .gitignore  Dockerfile  LICENSE  README.md  agents-cli-manifest.yaml  architecture.mermaid  main.py  mcp_server.py  pyproject.toml
.agents/: AGENTS.md
agents/: fast_api_app.py
agents/app_utils/: telemetry.py  typing.py  visual_runner.py
agents/music_assistant/: __init__.py  agent.py
app/: __init__.py  fast_api_app.py
app/app_utils/: telemetry.py  typing.py  visual_runner.py
deployment/terraform/single-project/: variables.tf
deployment/terraform/single-project/vars/: env.tfvars
examples/: musicxml_sample.musicxml
skills/acoustic_audio_synthesis/scripts/: synthesize_canvas.py  synthesize_score.py
skills/midi_analytics/: SKILL.md
skills/midi_analytics/assets/: sample.mid
skills/midi_analytics/scripts/: generate_mock_midi.py  parse_midi_metrics.py
skills/music_theory_query/: SKILL.md
skills/music_theory_query/scripts/: analyze_chord.py  detect_key.py  evaluate_intervals.py  list_scale_pitches.py
skills/score_construction/: SKILL.md
skills/score_construction/scripts/: canvas_manager.py  score_manager.py
skills/visual_notation_rendering/: SKILL.md
skills/visual_notation_rendering/scripts/: draw_chord.py  generate_visuals.py
soundfonts/: soundfonts.md
specs/: chord_visualization.feature  key_detection.feature  midi_analytics.feature  music_theory_query.feature  score_editing.feature  test_chord_visualization.py  test_key_detection.py  test_midi_analytics.py  test_music_theory_query.py  test_score_construction.py  test_score_editing.py  test_voice_leading.py  voice_leading.feature
tests/eval/datasets/: basic-dataset.json
tests/integration/: test_server_e2e.py
tests/unit/: test_music_skills.py
