[project]
name = "cadence"
version = "0.1.0"
description = "Cadence — an AI music assistant using google-adk, music21, and pretty_midi"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=2.3.0",
    "music21>=9.1.0",
    "pretty-midi>=0.2.10",
    "matplotlib>=3.8.0",
    "google-cloud-logging>=3.16.0",
    "opentelemetry-exporter-otlp>=1.42.1",
    "opentelemetry-exporter-gcp-logging>=1.12.0a0",
    "tinysoundfont>=0.3.7",
    "mcp[cli]>=1.28.1",
]

[project.optional-dependencies]
eval = [
    "pytest>=7.0.0",
    "google-cloud-aiplatform[evaluation]>=1.158.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "skills"]
